cambios en la clase de soldadura

--- a/frontend/html/crear_cuenta.html
+++ b/frontend/html/crear_cuenta.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="../js/creacion_usuario/creacion_usuario.js"></script>
     <link rel="stylesheet" href="../css/pagina_principal.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -49,7 +50,7 @@
             </div>
             
             <p class="w3-center">
-                <button type="button" class="w3-button w3-section w3-blue w3-ripple"> CREAR</button>
+                <button type="button" onclick="" class="w3-button w3-section w3-blue w3-ripple"> CREAR</button>
             </p>
         </form>
     </div>
