--- a/frontend/html/pagina_inicio.html
+++ b/frontend/html/pagina_inicio.html
@@ -9,6 +9,7 @@
     <script src="../js/pagina_inicio/informacion_proyectos.js"></script>
     <script src="../js/pagina_inicio/funciones_index_html.js"></script>
     <link rel="stylesheet" href="../css/estilo_index_html.css">
+    <link rel="icon" type="image/png" href="../img/logo_tubacero2.png" />
     <title>SADS</title>
 </head>
 <body onload="inicio_pagina()">
