agregando app de cliente no visible aun

--- a/frontend/html/pagina_inicio.html
+++ b/frontend/html/pagina_inicio.html
@@ -54,13 +54,22 @@
             </div>
 
             <div id="contenido-reporte-tubo">
-                            <label><b>No. de tubo</b></label>
-                            <input type="text" placeholder="No. de tubo" id="No_tubo" required>
-                            <button type="button" onclick="descarga_reportes()">Buscar reportes</button>
-                            <hr>
-                            <div id="links_descarga">
+                <div id="contenido-busqueda">
+                    <div class="div-contenido-busqueda"></div>
+                    <div class="div-contenido-busqueda">
+                        <label><b>No. de tubo</b></label>
+                        <input type="text" placeholder="No. de tubo" id="No_tubo" required>
+                        <button type="button" onclick="descarga_reportes()">Buscar reportes</button>
+                    </div>
+                    <div class="div-contenido-busqueda">
+                        <!--<label for=""><a href="../../app_cliente_SADS/CLIENTE_SADS.application">descargar cliente SADS</a></label>-->
+                    </div>
+                </div>
+                            
+                <hr>
+                <div id="links_descarga">
 
-                            </div>
+                </div>
             </div>
 
             <div id="contenido-reportes-dia">
