pagina de mantenimiento agregada no terminada

--- a/frontend/html/html_temario_mtto/temario_mtto.html
+++ b/frontend/html/html_temario_mtto/temario_mtto.html
@@ -3,16 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="../../img/logo-1.png" />
+    <link rel="stylesheet" href="../../css/estilo_temario_mtto.css">
+    <title>MTTO</title>
     <title>Document</title>
 </head>
 <body>
     
     <div id="contenido-pagina-temario">
-        <head>
+        <header>
             <div id="div-logo">
                 <img onclick="mostrar_contenidos('a')" id="logo" src="../../img/logo-1.png" alt="logo_tubacero">
             </div>
-        </head>
+        </header>
 
         <nav>
             <button onclick="mostrar_temario('b')">Electricidad</button>
@@ -26,7 +29,7 @@
         </nav>
 
         <section id="section-central-temario">
-             <iframe src="default_temario.html" frameborder="0"></iframe>
+             <iframe title="temario" src="default_temario.html" frameborder="0"></iframe>
         </section>
 
         <footer>
