--- a/frontend/html/pagina_inicio.html
+++ b/frontend/html/pagina_inicio.html
@@ -10,7 +10,7 @@
     <script src="../js/pagina_inicio/funciones_index_html.js"></script>
     <script src="../js/pagina_inicio/conteo_tuberia.js"></script>
     <link rel="stylesheet" href="../css/estilo_index_html.css">
-    <link rel="icon" type="image/png" href="../img/logo_tubacero2.png" />
+    <link rel="icon" type="image/png" href="../img/logo-1.png" />
     <title>SADS</title>
 </head>
 <body onload="inicio_pagina()">
